--- a/scrumpoker/index.html
+++ b/scrumpoker/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000">
     
     <link rel="manifest" href="resources/manifest.json" />
-    <link rel="icon" type="image/svg+xml" href="resources/icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="resources/icon.svg" sizes="any" />
 
     <style>
       body, root {
