--- a/scrumpoker/index.html
+++ b/scrumpoker/index.html
@@ -155,6 +155,14 @@
       const __ = (tagName, attrs, ...children) => new El(tagName, attrs, ...children);
       const root = __("div", { "class": "root", "data-state": 0 });
       document.addEventListener("DOMContentLoaded", () => document.body.appendChild(root.domElement), false);
+      
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/sw.js')
+            .catch(err => console.log('ServiceWorker registration failed: ', err));
+        });
+      }
+
       const __card = (label, row, col) => {
         const el =
         __("div",
