--- a/scrumpoker/index.html
+++ b/scrumpoker/index.html
@@ -158,7 +158,7 @@
       
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/sw.js')
+          navigator.serviceWorker.register('src/sw.js')
             .catch(err => console.log('ServiceWorker registration failed: ', err));
         });
       }
