--- a/scrumpoker/index.html
+++ b/scrumpoker/index.html
@@ -156,11 +156,21 @@
       const root = __("div", { "class": "root", "data-state": 0 });
       document.addEventListener("DOMContentLoaded", () => document.body.appendChild(root.domElement), false);
       
+      /*
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', function() {
           navigator.serviceWorker.register('src/sw.js')
             .catch(err => console.log('ServiceWorker registration failed: ', err));
         });
+      }
+      */
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./sw.js')
+        .then(() => 
+          navigator.serviceWorker.ready
+          .then((worker) => worker.sync.register('syncdata'))
+        )
+        .catch(err => console.log(err));
       }
 
       const __card = (label, row, col) => {
