--- a/scrumpoker/index.html
+++ b/scrumpoker/index.html
@@ -165,7 +165,7 @@
       }
       */
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./sw.js')
+        navigator.serviceWorker.register('./src/sw.js')
         .then(() => 
           navigator.serviceWorker.ready
           .then((worker) => worker.sync.register('syncdata'))
