--- a/scrumpoker/index.html
+++ b/scrumpoker/index.html
@@ -17,7 +17,7 @@
       body, root {
         margin: 0;
         padding: 0;
-        background-color: #000;
+        background-color: #F00;
         text-align: center;
         overflow: hidden;
         font-family: monospace;
