--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
     <h2>800147 on Github</h2>
     <a href="/scrumpocker">Scrum pocker</a><br />
-    <a href="/regexmatcher/RegExMatcher.html">RegEx Matcher</a><br />
+    <a href="/regexmatcher">RegEx Matcher</a><br />
   </body>
 </html>
