--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h2>800147 on Github</h2>
-    <a href="/scrumpocker">Scrum pocker</a><br />
-    <a href="/regexmatcher">RegEx Matcher</a><br />
+    <a href="/scrumpoker/">Scrum poker</a><br />
+    <a href="/regexmatcher/">RegEx Matcher</a><br />
   </body>
 </html>
