--- a/regexmatcher/index.html
+++ b/regexmatcher/index.html
@@ -239,8 +239,8 @@ if (results.length > 0) {
 if (resultsOk) {
   appendChildren(body,
     __("div", { "class": "bottom" },
-      __("button", { "class": "bottom-button" }, "all to clipboard").usedIn(el => copyAllButton = el),
-      __("button", { "class": "bottom-button" }, "first to clipboard").usedIn(el => copyFirstButton = el)
+      __("button", { "class": "bottom-button" }, "first to clipboard").usedIn(el => copyFirstButton = el),
+      __("button", { "class": "bottom-button" }, "all to clipboard").usedIn(el => copyAllButton = el)
     )
   );
 }
