--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h2>800147 on Github</h2>
     <a href="/scrumpoker/">Scrum poker</a><br />
     <a href="/regexmatcher/">RegEx Matcher</a><br />
+    <a href="/regexpreplacer/">RegExp Replacer</a><br />
   </body>
 </html>
