--- a/regexpreplacer/index.html
+++ b/regexpreplacer/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>RegExp Replacer</title>
 
     <meta charset="utf-8">
