--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
   </head>
   <body>
     <h2>800147 on Github</h2>
-    <a href="/scrumpoker/">Scrum poker</a><br />
-    <a href="/regexmatcher/">RegEx Matcher</a><br />
-    <a href="/regexpreplacer/">RegExp Replacer</a><br />
+    <ul>
+      <li>
+        <a href="/scrumpoker/">Scrum poker</a><br />
+      </li>
+      <li>
+        <a href="/regexpmatcher/">RegExp Matcher</a><br />
+      </li>
+      <li>
+        <a href="/regexpreplacer/">RegExp Replacer</a><br />
+      </li>
+    </ul>
   </body>
 </html>
