--- a/regexpmatcher/index.html
+++ b/regexpmatcher/index.html
@@ -433,13 +433,29 @@ const __ = (tagName, attrs = null, ...children) => {
 
 //start
 const addClickAndPressEvent = el => {
+  const PERIOD_IN_MILLISECONDS = 50;
+  const IDLE_STEPS = 10;
+
   let n = 0;
   let preventMouse = false;
   let preventClick = false;
+  let interval = null;
   const dispatch = () => {
     const event = new Event("click-and-press");
     el.dispatchEvent(event);
   }
+  const clear = () => {
+    if (interval != null) {
+      clearInterval(interval);
+      interval = null;
+    }
+  };
+  const set = () => {
+    clear();
+    dispatch();
+    n = IDLE_STEPS;
+    interval = setInterval(tick, PERIOD_IN_MILLISECONDS);
+  };
   const tick = () => {
     if (n > 0) {
       n--;
@@ -447,19 +463,7 @@ const addClickAndPressEvent = el => {
       dispatch();
     }
   };
-  let interval = null;
-  const set = () => {
-    clear();
-    dispatch();
-    n = 10;
-    interval = setInterval(tick, 50)
-  };
-  const clear = () => {
-    if (interval != null) {
-      clearInterval(interval);
-      interval = null;
-    }
-  };
+
   el.addEventListener("touchstart", e => {
     preventClick = true;
     preventMouse = true;
@@ -643,7 +647,7 @@ let copyFirstButton;
 let resultsElement;
 if (results.length > 0) {
   appendChildren(body,
-    __("div", { "class": "results" },
+    __("div", { "class": "results", "id": "result" },
       ...results
     ).usedIn(el => resultsElement = el)
   );
