--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <li>
         <a href="/regexpreplacer/">RegExp Replacer</a><br />
       </li>
+      <li>
+        <a href="/showhtml/">Show HTML</a><br />
+      </li>
     </ul>
   </body>
 </html>
