--- a/regexpreplacer/index.html
+++ b/regexpreplacer/index.html
@@ -197,7 +197,7 @@ body {
   margin: var(--half-indent);
 }
 
-
+      * { -webkit-appearance: none;}
 
 .justify-content_flex-end {
   justify-content: flex-end;
