--- a/regexpmatcher/index.html
+++ b/regexpmatcher/index.html
@@ -43,6 +43,7 @@ body {
   font-size: var(--font-size);
   line-height: var(--line-height);
   color: var(--color);
+  -webkit-appearance: none;
 }
 :focus {
   outline: var(--border-width) dashed var(--color);
