--- a/regexpreplacer/index.html
+++ b/regexpreplacer/index.html
@@ -43,6 +43,7 @@ body {
   font-size: var(--font-size);
   line-height: var(--line-height);
   color: var(--color);
+  -webkit-appearance: none;
 }
 :focus {
   outline: var(--border-width) dashed var(--color);
@@ -197,8 +198,8 @@ body {
   margin: var(--half-indent);
 }
 
-      * { -webkit-appearance: none;}
 
+      
 .justify-content_flex-end {
   justify-content: flex-end;
 }
